chore: add Emotion babel plugin and configure Vite for CSS-in-JS support

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "remark-smartypants": "^3.0.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
