Add vertical alignment options for slide text (#23)
* Add vertical text alignment control for slides

* Fix text spacing by wrapping markdown for vertical alignment

* Adjust vertical alignment wrapper hierarchy

* chore: rename package to textpost and bump version to 0.1.2

* chore: add .nvmrc file to specify Node.js version v22.21.0

* chore: update package-lock

* chore: add Emotion babel plugin and configure Vite for CSS-in-JS support

* style: remove margin overrides from first/last child elements in TextContentInner

* fix: remove margin overrides for children of TextContentInner

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "insta-post-generator",
+  "name": "textpost",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -24,6 +24,7 @@
     "remark-smartypants": "^3.0.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
